# Standard_Normal_PRNGs

./: Box_Muller_generator.c  CMakeLists.txt  Marsaglia_polar_generator.c  PRNG_uniform.c  README.md  SN_PRNG.h  histogram.gnuplot  histogram_generator.c  main.c  mean_vs_batch.gnuplot  sample_mean_calc.c  sample_variance_calc.c  sort_compare.c  variance_vs_batch.gnuplot
